wip grails-3 compatibility